my-app-K8's/my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mani-sample-service
spec:
  selector:
    app: sample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
